# pygismeteo-base

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  build.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
pygismeteo_base/: __init__.py  _enum.py  _pydantic.py  constants.py  current.py  endpoint.py  http.py  responses.py  search.py  types.py  typing_compat.py  validators.py
pygismeteo_base/dates/: month.py  now.py  one_day.py  ten_days.py  three_days.py  two_weeks.py
pygismeteo_base/endpoints/: current.py  search.py  step24.py  step3.py  step6.py
pygismeteo_base/models/: __init__.py  _base.py  _enum.py  current.py  enums.py  search_by_coordinates.py  search_by_ip.py  search_by_query.py  step24.py  step3.py  step3or6.py  step6.py
pygismeteo_base/periods/: abc.py  mixins.py  mixins_abc.py
pygismeteo_base/step_n/: abc.py  mixins.py
src/pygismeteo_base/: __init__.py  http.py  responses.py  types.py
src/pygismeteo_base/endpoints/: _base.py  current.py  search.py  step24.py
src/pygismeteo_base/models/: current.py  search_by_coordinates.py  search_by_ip.py  search_by_query.py  step24.py  step6.py
