[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "pygismeteo-base"
description = "Internal library for pygismeteo and aiopygismeteo"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.9"
classifiers = [
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Russian",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["pydantic>=2", "typing-extensions>=4.4"]
urls.repository = "https://github.com/monosans/pygismeteo-base"

[dependency-groups]
dev = ["mypy[faster-cache]==1.13", "ruff==0.8.2"]

[tool.hatch.build.targets.sdist]
include = ["pygismeteo_base"]

[tool.hatch.version]
path = "pygismeteo_base/__init__.py"
