[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.8,<0.9"]

[project]
name = "pygismeteo-base"
version = "6.0.1"
description = "Internal library for pygismeteo and aiopygismeteo"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.9"
classifiers = [
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Natural Language :: Russian",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = ["pydantic>=2", "typing-extensions>=4.4"]
urls.repository = "https://github.com/monosans/pygismeteo-base"

[dependency-groups]
dev = ["mypy[faster-cache]==1.17", "ruff==0.12.5"]
